# ChiseAI

./: .bandit  .ci-trigger  .env.example  .envrc  .envrc.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .prettierignore  .prettierrc.yaml  .woodpecker.yml  .yamllint.yaml  1  61  AGENTS.md  Dockerfile.api  G4_OUTCOME_FIX_SUMMARY.md  IMPLEMENTATION_REPORT_ST-NS-025-02.md  PROOF_LOOP_ATTEMPT3_FINAL_REPORT.md  benchmark_pipeline.py  ci_report.md  coverage.json  coverage.xml  dedup_workflow.py  demo_brain_cicd.py  docker-compose.daily-summary.yml  docker-compose.test.yml  fix_placement.py  fix_placement2.py  fix_placement3.py  fixes.patch  local-ci-checks.sh  local-ci-unification.md  migration_report.json  opencode.json  opencode.jsonc  opencode.jsonc.tui-migration.bak  package-lock.json  package.json  pre_push_gate.py  (+7 more)
.githooks/: pre-commit-status-guardrail  pre-push
.github/workflows/: ci.yml  codeql.yml
.opencode/: oh-my-opencodebak.jsonc
.opencode/agent/: Aria.md  AriaRuntime.md  Critic.md  Dev.md  GitReviewBot.md  Jarvis.md  JarvisRuntime.md  Juniordev.md  Merlin.md  Quickdev.md  QuickdevFast.md  README.md  Research.md  ResearchFast.md  SeniorDev.md  WebResearch.md  bmad-agent-bmad-master.md  bmad-agent-bmb-agent-builder.md  bmad-agent-bmb-module-builder.md  (+20 more)
.playwright-mcp/: page-2026-04-09T12-35-33-373Z.yml  page-2026-04-09T12-36-58-708Z.yml  page-2026-04-09T12-38-47-803Z.yml  page-2026-04-11T17-45-32-682Z.yml  page-2026-04-11T17-45-52-512Z.yml  page-2026-04-11T18-06-22-156Z.yml
.pre-commit-hooks/: validate-tempmemory-frontmatter.py
.serena/: project.yml
.woodpecker/: autocog-scheduler.yaml  ci.yaml  cron-eval.yaml  cron-hourly-health.yaml  cron-security.yaml  pipeline.yaml  pr-auto-flow.yaml  pr-lifecycle-monitor.yaml  push.yaml  workflow-archive.yaml
_bmad-output/: LIVE_PROOF_E2E_REPORT.md  PAPER-LIVE-001-canary-checklist.json  bybit-auth-evidence.json  bybit-auth-matrix-evidence.json  bybit-websocket-evidence.json  chiseai-iteration-loop-spec-ChiseAI.md  crontab_check_20260218_121838.json  crontab_check_20260218_121847.json  crontab_installation_proof.txt  discord_integration_test_results.json  item4_artifacts_manifest.md  item4_cron_proof.md  item4_cron_run_proof.md  item4_discord_proof.md  kimi_probe_20260218_171858.json  kimi_probe_20260218_171921.json  live-proof-e2e-evidence.json  live-proof-summary.json  live_proof_execution_report_CH-KIMI-DIAG-001.md  pipeline-proof-evidence.json  prd-validation-report-20260209-021802Z.md  prd-validation-summary-20260209-021802Z.md  provider_chain_20260218_172024.json  provider_chain_20260218_172343.json  provider_chain_20260218_172544.json  provider_chain_latest.json  workflow_status_update_proof.yaml
config/: __init__.py  autocog-canary.yaml  autocog.yaml  autocog_alerts.yaml  autocog_policies.yaml  autonomy_job_registry.yaml  bootstrap.py  bybit_endpoints.yaml  cache.yaml  calibration.yaml  discord_routing.yaml  env_loader.py  exchange_pool.yaml  feature_flags.py  grafana_queries.yaml  indicators.yaml  market_realism.yaml  reporting.yaml  scheduler.yaml  skill_autonomy.yaml  trading_mode.py  training_data.yaml
coverage/: __init__.py
data/: optimization_schedule.json
docs/: FINAL_CLOSURE_REPORT_ST-FINAL-CLOSURE-001.md  NS-NEXT-STEPS-HANDOFF.md  PAPER-DIAG-001-FOLLOWUP-002-README.md  REPO-001-handoff.md  agent-discoverability-ux-guidance.md  architecture.md  bmm-workflow-status.yaml  bmm-workflow-status.yaml.backup.20260308  bmm-workflow-status.yaml.backup.20260320175027  bmm-workflow-status.yaml.backup.20260320212309  bmm-workflow-status.yaml.backup.20260321145900  bmm-workflow-status.yaml.backup.20260321150129  bmm-workflow-status.yaml.backup.archive.20260406023723  ci-cd-gitea-woodpecker.md  ci-remediation-plan.md  daily-reflection-cadence-setup.md  debt-matrix.yaml  discord-g5-fix.md  human_approval.yaml  integration_assessment_bybit_demo.md  llm-configuration.md  paper-ready-readiness-packet.md  phase4-merge-hygiene-plan.md  prd.md  product-brief.md  startingprd-validation-report.md  startingprd.md  taiga-sync.md  workflow-archival-live-mode-implementation.md  worktree-session-hardening.md
grafana/: paper-burnin-dashboard.json  signal-pipeline-dashboard.json
infrastructure/: docker-compose.dashboard-emitter.yml  docker-compose.paper.yml  docker-compose.signals.yml
reports/: feature_flags_check_report.md
schemas/: constitution.json  swarm-config.schema.json
scripts/: .env.example  README.md  activate_signal_pipeline.py  analyze_pr_paths.py  audit_observer_baseline.py  audit_reflector_baseline.py  autocog_canary_health_check.py  autocog_canary_report.py  autocog_weekly_summary.py  backfill_tempmemory_iterlogs.py  backtest_runner.py  benchmark_cache.py  bootstrap_influx_grafana_auth.py  bootstrap_paper_recovery.sh  bos_choch_smoke_test.py  branch_hygiene.py  burn_in_test.py  bybit_demo_trace.py  calculate_carryover_proxy.py  calibrate_bot_confidence.py  canary_auto_eval.py  canary_validation.py  check_env.py  check_feature_flags.py  check_ttl.lua  ci_check_branch.sh  compare_candidates.py  configure_grafana_datasource.py  continuous_paper_emitter.py  continuous_signal_generator.py  create_evidence_bundle.py  cron_branch_hygiene.sh  data_quality_monitor.py  demo_ece.py  demo_ingestion_integration.py  demo_repeated_issues.py  demo_shadow_testing.py  diagnostic_crontab_check.sh  diagnostic_kimi_probe.py  diagnostic_provider_chain.py  (+112 more)
src/: main.py  trading_mode_loader.py
temp/: auto-pr-automerge-test.txt  auto-verify-006.txt  auto-verify-008.txt  governance-reflection-memory-compass-suggested-spec.md
tests/: __init__.py  ci_fail_black.py  conftest.py  test_backtest_runner.py  test_ci_metrics.py  test_data_quality_monitoring.py  test_discord_paper_integration.py  test_gitea_pr_automerge.py  test_iteration_logging.py  test_iterloop_issue_enforcement.py  test_iterloop_structured_issues.py  test_mini_brain_eval.py  test_mini_brain_eval_structured.py  test_risk.py  test_smoke_test_helper.py  test_taiga_sync.py  test_tempmemory_ingestion_runner.py
tools/: __init__.py  redis_state.py
(+6153 files in other folders)
