[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "chiseai"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = [
    "ccxt>=4.0.0",
    "influxdb-client>=1.40.0",
    "asyncpg>=0.29.0",
    "numpy>=1.24.0",
    "pytest-asyncio>=0.21.0",
    "scipy>=1.10.0",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = []

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
ignore_missing_imports = true
exclude = ["tests/"]
explicit_package_bases = true

# Override for tests (allow untyped defs and missing returns)
[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
no_implicit_optional = false
warn_return_any = false
check_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
# Tooling/integration modules can be high-IO and are better covered by
# explicit integration tests. Keep unit-test coverage focused on core library.
omit = ["src/chiseai/taiga_sync.py"]

[tool.bandit]
skips = ["B105"]
