[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "chiseai"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = [
    "ccxt>=4.0.0",
    "fastapi>=0.100.0",
    "influxdb-client>=1.40.0",
    "asyncpg>=0.29.0",
    "numpy>=1.24.0",
    "pytest-asyncio>=0.21.0",
    "scipy>=1.10.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
    # TEMPO-2026-001: OpenTelemetry dependencies
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.41b0",
    "opentelemetry-instrumentation-redis>=0.41b0",
    "opentelemetry-instrumentation-requests>=0.41b0",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
# SIM rules are code simplification suggestions, not errors - defer to code review
ignore = ["SIM102", "SIM108", "SIM116", "SIM117"]

[tool.ruff.lint.per-file-ignores]
# Line too long in test files - tests prioritize readability over strict line length
"tests/**/*" = ["E501", "E741", "B017", "B007", "E721", "F841", "E402", "SIM105"]
# Generated or fixture files
"tests/e2e/fixtures/*" = ["E501", "F403", "F405"]
# Scripts prioritize functionality over style
"scripts/**/*" = ["E501", "E402", "E722", "F401", "F402", "B904", "B007", "B015", "SIM115"]
# Root-level utility scripts
"*.py" = ["E501"]
# API router files often have long docstrings/URLs
"src/api/**/*" = ["E501"]
# Query builders with complex expressions
"src/api/influx/*" = ["E501"]
# Automation modules with long log messages
"src/automation/*" = ["E501"]
# Control plane with complex conditionals
"src/autonomous_control_plane/**/*" = ["E501", "B007"]
# ML module uses conditional imports for optional dependencies
"src/ml/**/*" = ["E402"]
# Governance APIs use FastAPI Depends pattern
"src/governance/**/*" = ["B008", "B904"]
# Exchange connectors may have legacy patterns
"src/data/exchange/*" = ["E402"]
# Backtesting DSL uses mathematical notation
"src/backtesting/**/*" = ["E741"]
# Ops scripts with logging patterns
"scripts/ops/*" = ["E402"]
"src/evaluation/__init__.py" = ["E402"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "^tests/",
    "^src/autonomous_git/",
    "^src/testing/",
    "^src/load_testing/",
    "^src/ml/",
    "^src/autonomous_control_plane/",
    "^src/execution/paper/",
    "^src/data/exchange/",
    "^src/discord_alerts/",
    "^src/automation/",
    "^src/reporting/",
    "^src/operations/",
    "^src/llm/",
    "^src/grafana/",
    "^src/signal_generation/",
    "^src/api/",
    "^src/main\\.py$",
    "^src/trading_mode_loader\\.py$",
    "^src/confidence/",
    "^src/monitoring/datasource_health\\.py$",
    "^src/data_ingestion/storage\\.py$",
    "^src/backtesting/kpi_writer\\.py$",
    "^src/portfolio_risk/alerts/",
    "^src/runbooks/",
    "^src/backtesting/dsl/",
    "^src/execution/canary/",
    "^scripts/grafana-performance-test\\.py$",
]
explicit_package_bases = true

# Override for tests (allow untyped defs and missing returns)
[[tool.mypy.overrides]]
# Test utilities and fixtures
module = ["tests.*"]
disallow_untyped_defs = false
no_implicit_optional = false
warn_return_any = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = "scripts.*"
disallow_untyped_defs = false
check_untyped_defs = false
warn_return_any = false

[[tool.mypy.overrides]]
module = "src.governance.*"
disallow_untyped_defs = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "tools.redis_state",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "src.neuro_symbolic.*",
    "src.execution.*",
    "src.evaluation.*",
    "src.persistence.*",
    "src.config.bootstrap",
    "src.reporting.weekly_generator",
    "src.security.tls.tls13",
    "src.redundancy.manager",
    "src.governance.memory.*",
    "src.governance.tempmemory.*",
    "src.governance.reflection.*",
]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
# File descriptor management for CI environments
# Use -n auto for parallel execution, but limit to prevent FD exhaustion
addopts = "-v --tb=short --import-mode=importlib"
# Timeout each test at 5 minutes to prevent hanging
faulthandler_timeout = 300
# Individual test timeout to prevent hangs (120 seconds per test)
timeout = 120
timeout_method = "signal"
markers = [
    "integration: integration tests that may require external services or slower setup",
    "unit: unit tests with isolated scope",
    "e2e: end-to-end tests spanning multiple components",
]

[tool.coverage.run]
# Tooling/integration modules can be high-IO and are better covered by
# explicit integration tests. Keep unit-test coverage focused on core library.
omit = [
    "src/chiseai/taiga_sync.py",
    "src/dashboard/risk_exposure_panel.py",
    "src/execution/kill_switch/cli.py",
    "src/monitoring/data_quality/grafana_integration.py",
    "src/monitoring/data_quality/discord_sender.py",
    "src/exchange_data/binance/client.py",
    "src/llm/zai_client.py",
    "src/data_ingestion/storage.py",
    "src/data/exchange/bybit_connector.py",
    "src/data/exchange/bitget_connector.py",
    "src/portfolio/state_management/storage.py",
    "src/discord_alerts/discord_client.py",
    "src/monitoring/data_quality/config.py",
    "src/market_analysis/signal_storage/postgres_storage.py",
]

[tool.bandit]
# Security scan exclusions - these patterns are acceptable for this codebase:
# B101: assert_used - Acceptable in test files (182 issues, all in tests)
# B104: hardcoded_bind_all_interfaces - 0.0.0.0 binding is standard for containerized services
# B105: hardcoded_password_string - False positives on variable names like 'pass' (3 issues)
# B107: hardcoded_password_default - False positives on default args (5 issues)
# B110: try_except_pass - Intentional patterns for cleanup/compatibility (12 issues)
# B311: random - Not used for cryptographic purposes (56 issues)
# B404: import_subprocess - Required for runbook executor and healing actions (2 files)
# B603: subprocess_without_shell_equals_true - Controlled subprocess usage (2 files)
# B608: hardcoded_sql_expressions - False positives for SQLAlchemy f-string queries (safely parameterized)
skips = ["B101", "B104", "B105", "B107", "B110", "B311", "B404", "B603", "B608"]
